data/derived/sp14/progs/unify/prog3669.ml.out
Characters 167-168:
  let ret = mulByDigit ( i t ) in
                         ^
Error: This expression has type int
       This is not a function; it cannot be applied.
